--- a/Rich/web/resources/css/ziyuan.css
+++ b/Rich/web/resources/css/ziyuan.css
@@ -9,8 +9,18 @@ and open the template in the editor.
 */
 .h30, .h28, .h26, .h24, .h22, .h20, .h18,  .h16{ line-height: 1.2;} 
 .h30{ font-size: 30px;}
-
+.h30:before{ content: ''; display: inline-block; width: 22px; height: 44px; vertical-align: top; background: url(../images/ziyuan/arr7.png) no-repeat;}
+.h30:after{ content: ''; display: inline-block; width: 22px; height: 44px; vertical-align: top; background: url(../images/ziyuan/arr8.png) no-repeat;}
+.h30{color:#fff;display:inline-block;font-family:微软雅黑;}
 .resources1 .title {padding:240px 0 55px;text-align:center;}
-.resources1 .title .t_head {padding:0 0 50px;background:url(resources/image/ziyuan/arr13.png) no-repeat bottom center;margin-bottom:20px;}
-.resources1 .t_head .h30:before, .resources1 .t_head .h30:after {background-image: url(resources/image/ziyuan/arr7.png);}
-.resources1 {background:url(resources/image/ziyuan/resources1.jpg);position:absolute;left:0;top:0;height:850px;width:100%;}
+.resources1 .title .t_head {padding:0 0 50px;background:url("../images/ziyuan/arr13.png") no-repeat bottom center;margin-bottom:20px;}
+
+.resources1 {background:url("../images/ziyuan/resources1.jpg");position:absolute;left:0;top:0;height:850px;width:100%;}
+.resources1 .list {height:616px;overflow:hidden;text-align:center;}
+.resources1 .list .item {float:left;background-repeat:no-repeat;background-position:right;background-size:cover;height:100%;width:16.66%;position:relative;}
+.resources1 .list .item a {display:block;width:100%;height:100%;}
+.resources1 .list .item.act {width:50%;}
+.resources1 .list .item .h18 {position:absolute;left:30px;top:60px;width:22px;text-align:center;color:#f0e5d8;bottom:60px;}
+/*
+.t_head .h30:before, .t_head .h30:after{ content: ''; display: inline-block; width: 22px; height: 44px; vertical-align: top; background: url(../images/ziyuan/png7.png) no-repeat;}
+*/
