--- a/Rich/web/resources/css/personal.css
+++ b/Rich/web/resources/css/personal.css
@@ -7,34 +7,111 @@ and open the template in the editor.
     Created on : 2019-9-3, 12:08:53
     Author     : 17119
 */
-body{
-    margin-left: 80px;
+
+.icon{
+    width: 50px;
+    height: 50px;
+    margin-top: 13px;
+}
+.title1{
+    width:1519.2px;
+    height:76px;
+    display:flex;
+    flex-direction:row;
+    background-color: rgba(51,51,51,0.5);
+}
+.text{
+    line-height: 76px;
+    font-family: FZYaoti;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+}
+.name{
+    line-height: 76px;
+    font-family: FZYaoti;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+    margin-left: 20px;
+    margin-right: 1000px;
+}
+.title2{
+    width:1519.2px;
+    height:54px;
+    display:flex;
+    flex-direction:row;
+    margin-top: 2px;
+    background-color: rgba(51,51,51,0.5)
 }
 
-ul{
-    list-style: none;
+.tab{
+    line-height: 54px;
+    margin-left: 200px;
+    margin-right: 50px;
+    font-family: FZYaoti;
+    text-align:center;
+    text-decoration: none;
+    color:white;
+    font-size: 20px;
+    
+}
+
+ .tab-menu ul{            
+     padding: 0;            
+     margin: 0;        
+ }        
+ 
+ .tab-menu ul li{            
+     display: inline-block;            
+     width: 200px;            
+     height: 40px;            
+     line-height: 40px;            
+     text-align: center;            
+     cursor: pointer;        
+ }        
+ 
+ .tab-menu ul li.active
+ {            
+     background: #749dcf;        
+ }       
+
+ .tab-con div{            
+     width: 600px;            
+     height: 300px;            
+     background: #F2F2F2;           
+     border: 1px solid #749dcf;;            
+     display: none;            
+     padding: 15px;         
+ }       
+ 
+ .tab-con div:first-child{            
+     display: block;        
+ }
+
+ul {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+    width: 200px;
 }
-
-li a{
+ 
+li a {
     display: block;
-    color: #000;
+    color: white;
     padding: 8px 16px;
     text-decoration: none;
-    font-size: 20px;
+}
+ 
+/* 鼠标移动到选项上修改背景颜色 */
+li a:hover {
+    background-color: #333;
+    opacity: 0.5;
+    color: white;
 }
 
-li a.active{
-    background-color: #4caf50;
-    color:white;
-}
-li a:hover:not(.active){
-    background-color: #555;
-    color: white;
+iframe{
+    position: absolute;
+    top: 200px;
+    left: 600px;
 }
