--- a/Rich/web/resources/css/personal.css
+++ b/Rich/web/resources/css/personal.css
@@ -14,7 +14,7 @@ and open the template in the editor.
     margin-top: 13px;
 }
 .title1{
-    width:1519.2px;
+    width:1600px;
     height:76px;
     display:flex;
     flex-direction:row;
@@ -107,11 +107,29 @@ li a {
 li a:hover {
     background-color: #333;
     opacity: 0.5;
-    color: white;
 }
 
 iframe{
     position: absolute;
     top: 200px;
     left: 600px;
+}
+
+
+form.jsfcrud_list_form{
+
+    position: relative;
+    width: 200px;
+    height: 100%;
+    margin: auto;
+}
+
+form.jsfcrud_list_form th, td th {
+
+    text-align: center;
+    font-size: 16px;
+    color: white;
+    font-weight: normal;
+    line-height: 68px;
+
 }
