--- a/Rich/web/resources/css/personal.css
+++ b/Rich/web/resources/css/personal.css
@@ -8,54 +8,7 @@ and open the template in the editor.
     Author     : 17119
 */
 
-.icon{
-    width: 50px;
-    height: 50px;
-    margin-top: 13px;
-}
-.title1{
-    width:1600px;
-    height:76px;
-    display:flex;
-    flex-direction:row;
-    background-color: rgba(51,51,51,0.5);
-}
-.text{
-    line-height: 76px;
-    font-family: FZYaoti;
-    font-size: 14px;
-    color: white;
-    text-decoration: none;
-}
-.name{
-    line-height: 76px;
-    font-family: FZYaoti;
-    font-size: 14px;
-    color: white;
-    text-decoration: none;
-    margin-left: 20px;
-    margin-right: 1000px;
-}
-.title2{
-    width:1519.2px;
-    height:54px;
-    display:flex;
-    flex-direction:row;
-    margin-top: 2px;
-    background-color: rgba(51,51,51,0.5)
-}
 
-.tab{
-    line-height: 54px;
-    margin-left: 200px;
-    margin-right: 50px;
-    font-family: FZYaoti;
-    text-align:center;
-    text-decoration: none;
-    color:white;
-    font-size: 20px;
-    
-}
 
  .tab-menu ul{            
      padding: 0;            
@@ -99,20 +52,16 @@ ul {
 li a {
     display: block;
     color: white;
-    padding: 8px 16px;
+    padding: 24px 16px;
     text-decoration: none;
+    font-size: 24px;
+    font-family: "楷体","楷体_GB2312";  
 }
  
 /* 鼠标移动到选项上修改背景颜色 */
 li a:hover {
     background-color: #333;
     opacity: 0.5;
-}
-
-iframe{
-    position: absolute;
-    top: 200px;
-    left: 600px;
 }
 
 
@@ -132,4 +81,16 @@ form.jsfcrud_list_form th, td th {
     font-weight: normal;
     line-height: 68px;
 
+}
+
+.navigation{
+    position:absolute;
+    left: 120px;
+    top:200px;
+}
+
+.detail{
+    position: absolute;
+    left: 350px;
+    top: 200px;
 }
