--- a/Rich/web/resources/css/personal.css
+++ b/Rich/web/resources/css/personal.css
@@ -44,18 +44,25 @@ and open the template in the editor.
 
 ul {
     list-style-type: none;
-    margin: 0;
+    margin: 50px;
     padding: 0;
-    width: 200px;
+    overflow: hidden;
 }
  
+li{
+    float:left;
+    margin-left: 160px;
+}
+
 li a {
     display: block;
-    color: white;
+    color: black;
+    text-align: center;
     padding: 24px 16px;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 30px;
     font-family: "楷体","楷体_GB2312";  
+    font-weight: bold;
 }
  
 /* 鼠标移动到选项上修改背景颜色 */
@@ -85,12 +92,55 @@ form.jsfcrud_list_form th, td th {
 
 .navigation{
     position:absolute;
-    left: 120px;
-    top:200px;
+    left:360px;
+    top:1050px;
+    width:1000px;
 }
 
 .detail{
     position: absolute;
-    left: 350px;
-    top: 200px;
+    top: 1400px;
 }
+
+.centerTitle{
+    font-size: 80px;
+    font-weight: bold;
+    position:absolute;
+    right: 190px;
+    top:270px;
+    margin-left: 10px;
+    font-family: "楷体","楷体_GB2312";
+    color: white;
+}
+
+.num-item .b {
+    font-family: impact;
+    font-size: 100px;
+    line-height: 1.5;
+    color: #333;
+}
+
+.num-box {
+    margin-bottom: 57px;
+    text-align: center;
+}
+
+
+.num-item {
+    display: inline-block;
+    width: 23%;
+    vertical-align: top;
+    margin-left: 30px;
+}
+
+.num-item .h18 {
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 30px;
+    font-family: "楷体","楷体_GB2312";  
+    font-weight: bold;
+}
+
+
