--- a/Rich/web/resources/css/log_in.css
+++ b/Rich/web/resources/css/log_in.css
@@ -45,7 +45,8 @@ a {
 
 #wrapper{
 	width:300px;
-	margin:0 auto;
+	margin-left:900px;
+        margin-top:300px;
 	padding-top:100px;
 	position: relative;
 }
@@ -76,9 +77,7 @@ a {
 }
 .switch_nav .switch_btn{
 	color: #fff;
-
 }
-
 .group_input {
 	position: relative;
 	text-align: left;
@@ -114,7 +113,7 @@ a {
     top: 14px;
 }
 
-.submit_btn{
+.login-btn{
 	width: 100%;
 	box-shadow: none;
 	border:0;
@@ -123,7 +122,7 @@ a {
 	display: block;
 	margin:20px 0;
 	color: #fff;
-	background-color: #0f88eb;
+	background-color: transparent;
 	border-radius: 3px;
 }
 
@@ -140,7 +139,3 @@ a {
 	border-radius: 3px;
 }
 
-/*#mobile{
-            float:left;
-            min-width:85%;
-}*/
